assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display&family=The+Nautigal:wght@700&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
}

body {
    font-family: 'Playfair Display', serif;
    font-weight: 300;
    color: #3a3a3a;
    font-size: 18px;

}

#menu {
    line-height: 75px;
    padding: 0 15px;
}

#menu ul {
    display: flex;
    list-style: none;
    justify-content: space-around;
}

#menu li {
    font-size: 110%;
    font-weight: bold;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu i {
    font-size: 120%;
    border-bottom: 2px solid #8b8b8b;
    padding-bottom: 5px;
}

.active {
    display: none;
}

.inactive {
    display: none;
}

#cover-image {
    height: 350px;
    width: 100%;
    background: url("/assets/images/cover-img.jpg") no-repeat center center;
    background-size: cover;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
    position: relative;

}

#cover-text {

    display: flex;
    flex-direction: column;
    justify-content: center;

    letter-spacing: 3px;
    text-align: center;
    font-style: italic;


    width: 80%;
    height: 200px;

    padding: 10px 15px;

    background-color: rgba(10, 148, 159, .8);
    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;

    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    margin-left: auto;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
    position: absolute;


}

#cover-text h1 {
    color: white;
    font-weight: bold;
    text-transform: uppercase;
    font-family: 'Playfair Display', serif;
    font-size: 185%;
}

#cover-text p {
    color: #ffebd0;
    font-weight: bold;
    font-family: 'Dancing Script', cursive;
    font-size: 155%;
}

#main-purpose {
    height: 450px;
    max-width: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;

    padding: 30px;
    background-color: snow;
}

#main-purpose>i {
    font-size: 30px;
    margin-bottom: 10px;
}

#main-purpose h1 {
    margin-bottom: 15px;
}

.decorated {
    text-align: center;
    width: 100%;
}

.decorated>span {
    position: relative;
    display: inline-block;
}

.decorated>span:before,
.decorated>span:after {
    content: '';
    position: absolute;
    top: 51%;
    border-bottom: 2px solid #cfcfcf;
    width: 100vw;
    margin: 0 20px;
}

.decorated>span:before {
    right: 100%;
}

.decorated>span:after {
    left: 100%;
}

#main-purpose p {
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
    margin: 10px auto;
    font-style: italic;
    color: #4a4a4a;
    margin-bottom: 30px;

}

.book-btn {
    width: 70%;
    padding: 10px;
    background-color: #3a3a3a;
    border: 1px solid #000;
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
        rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
    transition: 0.2s all;
}

.book-btn a {
    text-decoration: none;
    font-weight: bold;
    color: white;
}

.book-btn:active {
    transform: scale(0.97);
    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
}

#slider {
    width: 100%;
    height: 269px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    background-color: snow;
    margin-bottom: 10px;
}

#slider img {
    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
}

.mySlides {
    display: none;
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
}

.display-btn {
    position: absolute;
    height: 40px;
    width: 40px;
    font-weight: bold;

    border-radius: 50%;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px,
        rgba(0, 0, 0, 0.07) 0px 2px 2px,
        rgba(0, 0, 0, 0.07) 0px 4px 4px,
        rgba(0, 0, 0, 0.07) 0px 8px 8px,
        rgba(0, 0, 0, 0.07) 0px 16px 16px;
    opacity: 0.9;
}

.right {
    left: 88%;
}

.left {
    right: 88%;
}

#services {
    display: flex;
    flex-direction: column;
    align-items: center;

}

#services>i {
    font-size: 30px;
    margin-bottom: 10px;
}

#services>h1 {
    margin-bottom: 20px;
}

.circle-container {
    width: 320px;
    height: 320px;
    border-radius: 50%;
    border: 5px solid rgb(166 174 175 / 50%);
    ;
    margin-bottom: 20px;
    display: flex;
    align-items: center;
}

.circle-cover {
    width: 300px;
    height: 300px;
    margin: 0 auto;
    border-radius: 50%;
    position: relative;

}

#service1 {
    background: url("/assets/images/img_dance_cover.jpg") no-repeat center center;
    background-size: cover;
}

#service2 {
    background: url("/assets/images/img_princesses_cover.jpg") no-repeat center bottom;
    background-size: cover;
}

#service3 {
    background: url("/assets/images/img_deco_cover.jpg") no-repeat center center;
    background-size: cover;
}

.circle-middle {
    height: 300px;
    width: 300px;
    opacity: 0;
    border-radius: 50%;
    background-color: rgba(128 149 151 / 50%);
    transition: .2s ease;
    position: absolute;

}

.circle-middle:hover {
    cursor: pointer;
    opacity: 1;
}


.circle-text {

    padding: 10px;
    letter-spacing: 4px;
    text-align: center;

    font-size: 20px;
    font-weight: bold;
    color: white;
    background-color: rgb(0 0 0 / 48%);
    box-shadow: rgb(50 50 93 / 25%) 0px 6px 12px -2px, rgb(0 0 0 / 30%) 0px 3px 7px -3px;

    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);

}

#services-btn {
    width: 60%;
    padding: 10px;
    background-color: #eee;
    border: 1px solid #c1c1c1;
    border-radius: 25px;
    box-shadow: rgb(0 0 0 / 25%) 0px 0.0625em 0.0625em, rgb(0 0 0 / 25%) 0px 0.125em 0.5em, rgb(255 255 255 / 10%) 0px 0px 0px 1px inset;
    transition: 0.2s all;
}

#services-btn a {
    text-decoration: none;
    font-weight: bold;
    color: #3a3a3a;
}

#services-btn:active {
    transform: scale(0.97);
    box-shadow: 3px 2px 22px 1px rgb(0 0 0 / 24%);
}

